--- a/Assingment 09 chapter 39-67/style.css
+++ b/Assingment 09 chapter 39-67/style.css
@@ -1,3 +1,42 @@
+.mainpage{
+    background-image: url(image/background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.banner1,.banner2,.task{
+    text-align: center;
+    background-color: rgb(86, 27, 126);
+    width: 95%;
+    padding: 20px;
+    color: thistle;
+    border-radius: 8px;
+}
+.banner2{
+    width: 40%;
+    margin-left: 37px;
+    background-color: rgb(126, 27, 113);
+}
+.task{
+    width: 200px;
+    margin-left: 37px;
+    background-color: rgb(126, 27, 113);
+}
+.menu{
+    display: inline-block;
+    width: 130px;
+    padding: 30px;
+    background-color: rgba(5, 32, 58, 0.658);
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.menu:hover{
+    background-color: rgba(129, 10, 90, 0.712);
+
+}
+
 .photo{
     width: 200px;
     height: 200px;
@@ -66,4 +105,106 @@
     }
 table, td{
     padding: 10px;
+}
+/* ------------------------------------------login form css---------------------------- */
+.login_frm{
+    width: 600px;
+    height: 350px;
+    border: 1px solid gray;
+    border-radius: 15px;
+    box-shadow: 0 0 30px gray;
+    position: relative;
+    margin: auto;
+    top: 100px;
+    background-color: rgb(5, 66, 38);
+
+}
+.input1,.input2{
+    position: absolute;
+    display: inline-block;
+    top: 100px;
+    left: 160px;
+    width: 300px;
+    font-size:xx-large;
+    border-radius: 10px;
+}
+.input1:focus,.input2:focus{
+    outline: none;
+    border: 2px solid rgb(234, 0, 255);
+}
+.input2{
+    top: 200px;
+}
+legend{
+    position: absolute;
+    border: 0.5px solid gray;
+    width: 125px;
+    font-size: 25px;
+    border-radius: 5px;
+    top: -20px;
+    left: 40px;
+    background-color: rgb(189, 209, 6);
+    padding: 5px;
+    opacity: 85%;
+    color: white;
+}
+.label1,.label2{
+    position: absolute;
+    top: 110px;
+    left: 100px;
+    color: white;
+    font-size: 17px;
+}
+
+.label2{
+    top: 215px;
+    left: 90px;
+
+}
+.lg_btn{
+    position: absolute;
+    bottom: 40px;
+    left: 250px;
+    padding: 10px;
+    font-size: 17px;
+}
+.img_size{
+    width: 160px;
+    height: 160px;
+    margin-top: 10px;
+}
+.img_modal{
+    position: relative;
+    width: 600px;
+    height: 500px;
+    background-color: rgba(238, 130, 238, 0.733);
+    margin: auto;
+    top:-700px;
+    box-shadow: 0 0 40px black;
+    border-radius: 15px;
+}
+.md_img_size{
+    width: 600px;
+    height: 430px;
+
+}
+.modal_open{
+    display: block;
+}
+.modal_close{
+    display: none;
+}
+.btn_close{
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 100px;
+    padding: 10px;
+   background-color: rgba(12, 46, 119, 0.863);
+   color: white;
+   font-weight: bolder;
+   border-radius: 10px;
+}
+.btn_close:hover{
+    background-color: rgba(255, 0, 0, 0.966);
 }
