--- a/quizapp/style.css
+++ b/quizapp/style.css
@@ -3,19 +3,21 @@ body{
     padding: 0;
     background-image: url(pics/bckground.jpg);
     background-size: cover;
-    display: flex;
-    align-items: center;    
+    text-align: center;
+    
+    
 }
 .outerbox{
     border: 1px solid white;
     background-color: rgba(233, 227, 148, 0.418);
     border-radius: 10px;
-    height: 50em;
+    height: 400px;
     position: sticky;
-    margin-top: 10%;
+    top: 150px;
+    left: 200px;
     padding: 80PX;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
- 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    
 }
 .outerbox_btn{
     padding: 8PX;
@@ -24,9 +26,8 @@ body{
     border: 2px solid white;
     border-radius: 5px;
     color: white;
-    margin-top: 20px;
+    margin-top: 100px;
     margin-right: 10px;
-    font-size: 14px;
 }
 .outerbox_btn:hover{
     outline:none;
@@ -37,33 +38,15 @@ body{
     outline:none;
     background-color: white;
     color: blue;
-    box-shadow: 0 0 10px rgb(131, 75, 184);
+    box-shadow: 0 0 20px blueviolet;
 }
 .inputs{
     background-color: transparent;
     color: white;
     outline: none;
     border: none;
-    width: 200px;
     border-bottom: 2px solid white;
     margin-top: 100px;
     margin-right: 10px;
 
-}
-
-.mcq{
-   padding: 10%;
-}
-.quiz{
-    border: 2px solid white;
-    border-radius: 5px;
-    color: white;
-    padding: 4px;
-    
-}
-.ops{
-    display: block;
-    padding: 3px;
-    background-color: rgba(230, 222, 222, 0.486);
-    font-size: 14px;
 }
